--- a/src/components/SkillNme.astro
+++ b/src/components/SkillNme.astro
@@ -4,18 +4,25 @@ import Items from "./PropsComponents/items.astro";
 
 <div id="aboutMe">
     <div class="h-640 bg-gradient-to-b from-custom-green to-custom-Light-Green">
-        <div class="text-white grid grid-cols-1 md:grid-cols-2 md:gap-12 lg:gap-96 md:my-24 md:absolute md:left-52">
-    
-            <div class="bg-custom-black  w-80 h-auto md:w-96 md:h-96 text-2xl rounded-md m-auto my-6 md:my-0">
+        <div
+            class="text-white grid grid-cols-1 md:grid-cols-2 md:gap-12 lg:gap-96 md:my-24 md:absolute md:left-52"
+        >
+            <div
+                class="bg-custom-black w-80 h-auto md:w-96 md:h-96 text-2xl rounded-md m-auto my-6 md:my-0"
+            >
                 <h2 class="m-6">About me</h2>
                 <p class="text-xl m-4 flex flex-col text-justify">
-                    Hi, im Eleazar as i said before, im software dev and front-end dev, i've studied at ITLA, i'm 19yo, i haven being programming since
-                    17yo. I have learned some lenguage like C#, JS, and i liltle bit
-                    of python, i also have knowledge in DB such as mySQL, SQLITE and
-                    SQL server
+                    Hi, I'm Eleazar Moreta. As I mentioned before, I am a software and
+                    front-end developer. I have studied at ITLA, I'm 19 years
+                    old, and I have been programming since I was 17. I have
+                    learned some languages like C#, JS, and some knowledge of
+                    Python. In addition, I have knowledge in DB such as MySQL,
+                    SQLite, and SQL server.
                 </p>
             </div>
-            <div class="bg-custom-black w-80 h-auto md:w-96 md:h-96 text-2xl rounded-md m-auto my-6 md:my-0">
+            <div
+                class="bg-custom-black w-80 h-auto md:w-96 md:h-96 text-2xl rounded-md m-auto my-6 md:my-0"
+            >
                 <h2 class="m-6">Skills</h2>
                 <div class="m-6 grid grid-cols-2 gap-4 md:grid-cols-3 md:gap-6">
                     <Items name="JS" />
