--- a/src/components/contactMe.astro
+++ b/src/components/contactMe.astro
@@ -5,11 +5,11 @@ import Email from "../../public/email.astro";
 <div
     class="h-new bg-gradient-to-b from-custom-green to-custom-black flex justify-center items-center"
 >
-    <button
+    <a
+        href="mailto:eleazar1225@hotmail.com"
         class="rounded-md flex items-center animate-bounce gap-3 bg-custom-black text-white border border-transparent py-6 px-8 text-center text-xl transition-all hover:bg-black focus:bg-black active:bg-black disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
     >
         Contact to me
-        <a href="mailto:eleazar1225@hotmail.com"></a>
         <Email />
-    </button>
+    </a>
 </div>
