--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -8,8 +8,8 @@ import Card from "./PropsComponents/Card.astro";
             <Card
                 Picture="/imgs/morse-pic.png"
                 NameTitle="Morse converter"
-                Description=`This is one of my latest project that i already made, 
-                it use for convert word into morse code and de code them into normal words`
+                Description=`This is one of my latest projects. 
+                It converts words into Morse code and decodes them back into regular text.`
                 Href="https://morse-converter.vercel.app/"
                 GHerft="https://github.com/Pixzzz/morse-converter.git"
             />
@@ -17,7 +17,7 @@ import Card from "./PropsComponents/Card.astro";
             <Card
                 Picture="/imgs/pomodoro-pic.png"
                 NameTitle="Pomodorox"
-                Description="This project is simple, its just about a pomodoro timer"
+                Description="This is a straightforward project; it's simply a Pomodoro timer."
                 Href="https://pomodorox-pi.vercel.app/index.html"
                 GHerft="https://github.com/Pixzzz/Pomodorox.git"
             />
